# sysmon

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sysmon/: config.py  dashboard.py  inspect_service.py  monitor.py
tests/: test_config.py  test_dashboard.py  test_inspect_service.py  test_monitor.py
