[project]
name = "sysmon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "types-psutil>=7.2.2.20260130",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
