[project]
name = "sysmon"
version = "0.1.0"
description = "Lightweight Linux system health monitor with desktop notifications"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.2.2",
]

[project.scripts]
sysmon = "sysmon.monitor:main"
sysmon-inspect = "sysmon.inspect_service:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "types-psutil>=7.2.2.20260130",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
