[project]
name = "sysmon"
version = "0.1.0"
description = "Lightweight Linux system health monitor with desktop notifications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "rohan" }]
keywords = ["system-monitor", "linux", "notifications", "docker", "psutil"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "psutil>=7.2.2",
]

[project.urls]
Homepage = "https://github.com/rororowyourboat/sysmon"
Repository = "https://github.com/rororowyourboat/sysmon"
Issues = "https://github.com/rororowyourboat/sysmon/issues"

[project.scripts]
sysmon = "sysmon.monitor:main"
sysmon-inspect = "sysmon.inspect_service:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "types-psutil>=7.2.2.20260130",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "SIM105",  # contextlib.suppress — try/except is clearer for our use cases
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # allow longer lines in tests for readability
